--- a/style.css
+++ b/style.css
@@ -47,3 +47,27 @@ body{
     color: white;
     list-style-type: none;
 }
+@media only screen and (max-width:480px){
+    #stop{
+        font-size: 25px;
+        text-align: center;
+    }
+    #stop h1{
+        margin-top: 70px;
+    }
+    .timer div{
+        width: 80px;
+        margin: 260px 0px 0px 3px;
+        font-size: 50px;
+    }
+    #wrapper{
+        background-position: left;
+        
+    }
+    .timer{
+       margin-left:180px ;
+    }
+    #btn button{
+        width: 80px;
+    }
+}
